# QUASAR-SUBNET

./: .env.example  .gitignore  README.md  START_MINER.sh  START_MINER_INFERENCE.sh  START_SERVER.sh  START_VALIDATOR.sh  Top_miner_performance.py  min_compute.yml  requirements.txt  setup.py
docker-build/: BUILD.bazel  Dockerfile.cpu  Dockerfile.gpu  README.md  push_miner.sh
docs/: TROUBLESHOOTING.md
miner/: Dockerfile.inference  build_inference.sh  inference_server.py  requirements.inference.txt
miner_workspace/: SCORING_GUIDE.md  benchmark_local.py  quasar_import.py  setup_miner.sh  submit_miner.py  validate_submission.py
neurons/: miner.py  validator.py
quasar/: __init__.py  gpu_normalization.py  inference_verification.py
quasar/utils/: config.py
scripts/: register_miner.py
tests/: test_context_builder.py  test_quasar_mining.py
validator/: Dockerfile.sandbox
validator_api/: app.py  auth.py  models.py  verify_api.py
