load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load(":docker_config.bzl", "DOCKER_USERNAME")

# Package the miner inference server files
genrule(
    name = "miner_files_tar",
    srcs = [
        "//miner:inference_server.py",
        "//miner:requirements.inference.txt",
    ],
    outs = ["miner_files.tar"],
    cmd = """
        mkdir -p app
        cp $(location //miner:inference_server.py) app/inference_server.py
        cp $(location //miner:requirements.inference.txt) app/requirements.txt
        tar -cf $@ app
        rm -rf app
    """,
)

# Build GPU miner inference image (for Runpod with CUDA)
oci_image(
    name = "quasar_miner_image_gpu",
    base = "@cuda_base",
    tars = [":miner_files_tar"],
    env = {
        "PYTHONUNBUFFERED": "1",
        "MODEL_NAME": "Qwen/Qwen3-4B-Instruct-2507",
        "DEVICE": "cuda",
        "HOST": "0.0.0.0",
        "PORT": "8000",
    },
    entrypoint = ["/bin/sh", "-c", "apt-get update && apt-get install -y python3 python3-pip curl && pip3 install --no-cache-dir -r /app/requirements.txt && python3 /app/inference_server.py"],
    workdir = "/app",
)

# Build CPU miner inference image (for Render deployment)
oci_image(
    name = "quasar_miner_image_cpu",
    base = "@python_base",
    tars = [":miner_files_tar"],
    env = {
        "PYTHONUNBUFFERED": "1",
        "MODEL_NAME": "Qwen/Qwen3-4B-Instruct-2507",
        "DEVICE": "cpu",
        "HOST": "0.0.0.0",
        "PORT": "8000",
    },
    entrypoint = ["/bin/sh", "-c", "pip install --no-cache-dir -r /app/requirements.txt && python /app/inference_server.py"],
    workdir = "/app",
)

# Push GPU image to Docker Hub
oci_push(
    name = "push_miner_image_gpu",
    image = ":quasar_miner_image_gpu",
    repository = "index.docker.io/" + DOCKER_USERNAME + "/quasar-miner-gpu",
    remote_tags = ["latest"],
)

# Push CPU image to Docker Hub
oci_push(
    name = "push_miner_image_cpu",
    image = ":quasar_miner_image_cpu",
    repository = "index.docker.io/" + DOCKER_USERNAME + "/quasar-miner-cpu",
    remote_tags = ["latest"],
)

# Create local tarballs for testing
oci_tarball(
    name = "quasar_miner_tarball_gpu",
    image = ":quasar_miner_image_gpu",
    repo_tags = ["quasar-miner-gpu:latest"],
)

oci_tarball(
    name = "quasar_miner_tarball_cpu",
    image = ":quasar_miner_image_cpu",
    repo_tags = ["quasar-miner-cpu:latest"],
)
