load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load(":docker_config.bzl", "DOCKER_USERNAME")

# Package the miner inference server files
genrule(
    name = "miner_files_tar",
    srcs = [
        "//miner:inference_server.py",
        "//miner:requirements.inference.txt",
    ],
    outs = ["miner_files.tar"],
    cmd = """
        mkdir -p app
        cp $(location //miner:inference_server.py) app/inference_server.py
        cp $(location //miner:requirements.inference.txt) app/requirements.txt
        tar -cf $@ app
        rm -rf app
    """,
)

# GPU miner inference image.
#
# NOTE: oci_image cannot execute RUN commands, so all dependencies must
# be pre-installed in the base image.  Use the pre-built base image
# (quasar-miner-base-gpu) which contains python3, pip, torch, and
# inference requirements.  See push_miner.sh for the recommended build
# flow that uses the Dockerfile + crane instead.
oci_image(
    name = "quasar_miner_image_gpu",
    base = "@cuda_base",
    tars = [":miner_files_tar"],
    env = {
        "PYTHONUNBUFFERED": "1",
        "PYTHONDONTWRITEBYTECODE": "1",
        "MODEL_NAME": "Qwen/Qwen3-4B-Instruct-2507",
        "DEVICE": "cuda",
        "HOST": "0.0.0.0",
        "PORT": "8000",
    },
    entrypoint = ["python3", "/app/inference_server.py"],
    workdir = "/app",
)

# CPU miner inference image (for Render deployment).
# Same caveat as GPU: pip install in entrypoint fails without network.
# Prefer Dockerfile.cpu + docker push for production builds.
oci_image(
    name = "quasar_miner_image_cpu",
    base = "@python_base",
    tars = [":miner_files_tar"],
    env = {
        "PYTHONUNBUFFERED": "1",
        "PYTHONDONTWRITEBYTECODE": "1",
        "MODEL_NAME": "Qwen/Qwen3-4B-Instruct-2507",
        "DEVICE": "cpu",
        "HOST": "0.0.0.0",
        "PORT": "8000",
    },
    entrypoint = ["python", "/app/inference_server.py"],
    workdir = "/app",
)

# Push GPU image to Docker Hub
oci_push(
    name = "push_miner_image_gpu",
    image = ":quasar_miner_image_gpu",
    repository = "index.docker.io/" + DOCKER_USERNAME + "/quasar-miner-gpu",
    remote_tags = ["latest"],
)

# Push CPU image to Docker Hub
oci_push(
    name = "push_miner_image_cpu",
    image = ":quasar_miner_image_cpu",
    repository = "index.docker.io/" + DOCKER_USERNAME + "/quasar-miner-cpu",
    remote_tags = ["latest"],
)

# Create local tarballs for testing
oci_tarball(
    name = "quasar_miner_tarball_gpu",
    image = ":quasar_miner_image_gpu",
    repo_tags = ["quasar-miner-gpu:latest"],
)

oci_tarball(
    name = "quasar_miner_tarball_cpu",
    image = ":quasar_miner_image_cpu",
    repo_tags = ["quasar-miner-cpu:latest"],
)
